--- a/src/style.css
+++ b/src/style.css
@@ -9,13 +9,18 @@ a {
   color: #885df1;
 }
 .app-body {
-  background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
-  max-width: 800px;
+  /*background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);*/
+
+  background-image: url("https://i.imgur.com/FTV93fC.jpeg");
+  background-size: cover; /* This makes the image cover the entire background */
+  background-position: center; /* This centers the image */
+
+  max-width: 600px;
   margin: 50px auto;
   padding: 50px;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 16px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Lora", sans-serif;
 }
 .search-form-input {
   background-color: #f9f7fe;
@@ -40,6 +45,12 @@ a {
   font-size: 25px;
   line-height: 48px;
 }
+.app-weather-temp {
+  display: flex;
+  justify-content: right;
+  position: relative;
+  top: -150px;
+}
 .app-weather-details {
   font-size: 16px;
   color: rgba(39, 33, 66, 0.4);
@@ -49,11 +60,14 @@ a {
 .app-weather-details strong {
   color: #f95959;
 }
-.app-weather-temp {
+.current-temperature-icon {
+  font-size: 40px;
+  margin-right: 20px;
+}
+.current-temperature-value {
   font-size: 80px;
   line-height: 88px;
   font-weight: bold;
-  display: block;
 }
 .temperature-unit {
   font-size: 28px;
