--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ main {
   padding: 30px 0;
 }
 a {
-  color: #885df1;
+  color: #40356f;
 }
 .app-body {
   /*background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);*/
@@ -36,7 +36,7 @@ a {
   padding: 15px 30px;
   border: none;
   font-size: 16px;
-  margin-left: 50px;
+  margin-left: 40px;
   border-radius: 6px;
   color: white;
 }
@@ -44,6 +44,7 @@ a {
   margin: 0;
   font-size: 25px;
   line-height: 48px;
+  color: #fff2be;
 }
 .app-weather-temp {
   display: flex;
@@ -53,12 +54,12 @@ a {
 }
 .app-weather-details {
   font-size: 16px;
-  color: rgba(39, 33, 66, 0.4);
+  color: #222831;
   line-height: 24px;
-  font-weight: 500;
+  font-weight: 600;
 }
 .app-weather-details strong {
-  color: #f95959;
+  color: #f6318c;
 }
 .current-temperature-icon {
   font-size: 40px;
@@ -68,7 +69,9 @@ a {
   font-size: 80px;
   line-height: 88px;
   font-weight: bold;
+  color: #ffc93c;
 }
 .temperature-unit {
   font-size: 28px;
+  color: #f6318c;
 }
