--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ a {
   color: #40356f;
 }
 .app-body {
-  background-image: url("https://i.imgur.com/FTV93fC.jpeg");
+  background-image: url("https://imgur.com/eI4ZuOE");
   background-size: cover;
   background-position: center;
 
