--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ a {
   color: #40356f;
 }
 .app-body {
-  background-image: url("https://i.imgur.com/eI4ZuOE.jpeg");
+  background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/156/082/original/Photo-sky-wallpapers-desktop-desgins.jpg?1738224153");
   background-size: cover;
   background-position: center;
 
